tests/js/valid/record/parses/assignment-spaces-1.buri
hello = { name: "" }
a = {

hello

|

name

:

"world"

,

}