tests/js/invalid/record/mismatched-type-3.buri
Data = {
    data: Str,
    other: Int,
}

data: Data = {
    data: "hello",
}